# RING-5

./: .Rprofile  .ai-assistant-guide.md  .cursorrules  .dockerignore  .flake8  .gitattributes  .gitignore  .mcp-config.json  .pre-commit-config.yaml  AI-SETUP.md  COMMIT_PLAN.md  CONTRIBUTING.md  Dockerfile  Makefile  PARSER_INTEGRATION_GUIDE.md  PERFORMANCE_ANALYSIS.md  PROJECT_COMPLETION_SUMMARY.md  QUICKSTART.md  README.md  RING-5.code-workspace  RING-V.py  WEB_APP_README.md  app.py  argumentParser.py  barplot.R  calculateMean.R  config.json  dataCompressor.sh  dataFilter.R  dataManager.py  dataMeanCalculator.R  dataMixer.R  dataParse.py  dataParser.sh  dataPlot.py  dataRenamer.R  docker-compose.yml  generate_demo_data.py  launch_webapp.sh  makefile  (+15 more)
.agent/: .cursorrules  ANTIGRAVITY_README.md  ARCHITECTURE-IMPROVEMENT-PLAN.md  ARCHITECTURE.md  CHANGELOG.md  DOCKER_GUIDE.md  DUAL_IDE_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  STRONG-TYPING-SUMMARY.md  refactoring_plan_003_review.md  unified_architecture_manifesto.md  unified_architecture_manifesto.md.backup
.agent/plans/: latex-export-implementation.md
.agent/rules/: 000-identity-mission.md  001-architecture-standards.md  002-data-science-mastery.md  003-software-engineering.md  004-qa-testing-mastery.md  project-context.md
.agent/skills/: README.md  debug-async-parsing.md  new-plot-type.md  parsing-workflow.md  shaper-pipeline.md
.agent/workflows/: README.md  new-plot-type.md  new-variable-type.md  parsing-workflow.md  release-branch-review.md  test-driven-development.md
.github/: AI-CAPABILITIES.md  CODEQL-SETUP.md  CODEQL.md  copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  dependency-check.yml  pages.yml
.trunk/: trunk.yaml
build_files/: Rprofile_config.sh
config/: latex_presets.yaml
config_files/: config.json  config12Dic.json  config23Dic.json  config27Dic_ref.json  configMultipolicy.json  configReq-stalls.json  configTable.json  configTable29-04-24.json  configTest.json  configWoper.json  configWoper_sens.json  config_comparison_rs.json  config_effective.json  config_effective.old.json  config_final.json  config_final_abortdel.json  config_final_rebutal.json  config_highway.json  config_main.json  config_methodology.json  config_naive.json  config_rebuttal.json  config_sens_blk.json  config_sens_fwdrvsfwdw.json  config_sens_rtry.json  config_sens_rtry_rebutal.json  config_simple.json  config_wndm.json  config_woper_no_use.json
data_management/: dataManager.py  dataManagerFactory.py  dataManagerInterface.py  dataMixer.R  reduceSeeds.R
data_management/csv_data_manager/: dataManagerCsv.py  dataRenamer.R  removeOutliers.R
data_management/data_manager_R/: assignConfKeys.R  dataManagerR.py  dataMixer.R  dataRenamer.R  reduceSeeds.R  removeOutliers.R
data_parser/: configurationManager.py  dataParserFactory.py  dataParserInterface.py  dataParserJson.py  dataParserNewInterface.py
data_parser/data_parser_bash/: dataCompressor.sh  dataParser.sh  dataParserBash.py  meanCalculatorCpu.sh
data_parser/data_parser_perl/: dataParserPerl.py
data_parser/jsonParser/: dataParserJson.py
data_parser/multiprocessing/: parseWorkPool.py
docs/: AI-Agent-Setup.md  Adding-Plot-Types.md  Adding-Shapers.md  Architecture.md  Creating-Plots.md  Data-Transformations.md  Dependency-Updates.md  Development-Setup.md  First-Analysis.md  Home.md  Installation.md  LaTeX-Export-Guide.md  Parsing-Guide.md  Portfolios.md  Quick-Start.md  README.md  Testing-Guide.md  Web-Interface.md  _Sidebar.md  _config.yml  architecture-diagram.md  histogram-plot.md  index.md  parsing-architecture.md  services-architecture.md  web-layer-architecture.md
docs/api/: Backend-Facade.md  Parsing-API.md  Plotting-API.md  Shaper-API.md
docs/plots/: Bar-Charts.md  Grouped-Stacked-Bars.md  Histogram-Plots.md  Line-Plots.md  Scatter-Plots.md
examples/: README.md  complete_example.json
plots/: configurationManager.py  dataPlot.py  plotFactory.py  plotInterface.py  stackedBarplot.R
plots/plot_config/: dataFilter.R  ordering.R  plotConfigurerFactory.py  plotConfigurerInterface.py
plots/plot_impl/: plot.R
plots/src/: plot.R  styleMapper.R
schemas/: config_schema.json  parser_config_schema.json  portfolio_schema.json
scripts/: analyze_dependencies.py  debug_imports.py  verify_installation.py
src/: __init__.py
src/common/: type_mapper.py
src/config/: __init__.py  config_manager.py
src/core/: __init__.py  application_api.py  benchmark.py  performance.py
src/data_management/: dataManager.py  dataManagerFactory.py  manager_params.py
src/data_parser/: parser_params.py  stats_scanner.py
src/data_plotter/: configurationManager.py  data_plotter.py
src/data_preprocessing/: preprocessor.py
src/parsers/: __init__.py  parse_service.py  parser.py  pattern_aggregator.py  scanner.py  scanner_service.py  type_mapper.py
src/parsing/: config_manager.py  factory.py  interface.py  params.py  parser.py  stats_scanner.py
src/perl_libs/: TypesFormatRegex.pm
src/plotting/: __init__.py  base_plot.py  export.py  plot_engine.py  plot_factory.py  plot_manager.py  plot_renderer.py  plot_types.py  style_manager.py
src/scanning/: scanner.py
src/utils/: util.R  utils.py
src/web/: __init__.py  components.py  facade.py  state_manager.py  styles.py  types.py
templates/: .Rprofile-template  config_template.json
tests/: conftest.py  debug_legend.py  manual_test_app.py  repro_dist_error.py  test_aliasing.py  test_auto_refresh.py  test_basic.py  test_cli_backward_compat.py  test_data_labels.py  test_data_managers.py  test_e2e_managers_shapers.py  test_facade_managers.py  test_facade_reduction.py  test_gem5_config_structure.py  test_integration.py  test_modularization.py  test_parser_functional.py  test_persistent_labels.py  test_plot_classes.py  test_plotters.py  test_portfolio_config.py  test_scanner.py  test_web_modules.py  testthat.R  verify_legend_fix.py
tests/e2e/: test_browser_e2e.py  (+1 more)
tools/: create_config.py
utils/: util.R  utils.py
(+1372 files in other folders)
