[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ring5"
version = "1.0.0"
description = "Modern gem5 Data Analysis and Visualization Tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "RING-5 Development Team" }]
keywords = ["gem5", "data-analysis", "visualization", "performance-analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "tqdm>=4.65.0",
  "pytest>=7.0.0",
  "pandas>=2.0.0",
  "scipy>=1.10.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "jsonschema>=4.17.0",
  "streamlit>=1.28.0",
  "openpyxl>=3.1.0",
  "plotly>=5.17.0",
  "kaleido>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "black>=23.0.0", "flake8>=6.0.0"]

[project.urls]
Homepage = "https://github.com/your-org/ring5"
Repository = "https://github.com/your-org/ring5"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "components_library*"]

[tool.setuptools]
py-modules = ["argumentParser", "ring5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
