[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ring5"
version = "1.0.0"
description = "Modern gem5 Data Analysis and Visualization Tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "RING-5 Development Team" }]
keywords = ["gem5", "data-analysis", "visualization", "performance-analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "tqdm>=4.67.1",
  "pandas>=2.3.3",
  "scipy>=1.17.0",
  "numpy>=2.4.1",
  "matplotlib>=3.10.8",
  "jsonschema>=4.26.0",
  "streamlit>=1.53.1",
  "openpyxl>=3.1.5",
  "plotly>=6.5.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "black>=26.1.0",
  "flake8>=7.3.0",
  "mypy>=1.13.0",
  "pre-commit>=4.5.0",
  "pandas-stubs>=2.2.3.240909",
  "types-jsonschema>=4.23.0.20240813",
  "types-tqdm>=4.67.0.20250809",
  "types-PyYAML>=6.0.12",
  "scipy-stubs>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ring5"
Repository = "https://github.com/your-org/ring5"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "components_library*"]

[tool.setuptools]
py-modules = ["argumentParser", "ring5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
  "benchmark: marks tests as performance benchmarks (deselect with '-m \"not benchmark\"')",
]
filterwarnings = [
  "ignore:.*Support for the 'engine' argument is deprecated.*:DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.bandit]
# B603: subprocess without shell - we explicitly use shell=False with validated paths
# B404: import subprocess - required for Perl parser execution
skips = ["B603", "B404"]
